--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,3 +1,19 @@
+Database:
+  type: MYSQL  # MYSQL veya SQLITE
+  host: localhost
+  port: 3306
+  database: tuccar
+  username: root
+  password: ''
+
+Redis:
+  enabled: true
+  host: localhost
+  port: 6379
+  password: 'redisifre123'  # Redis şifresi varsa
+  serverId: skyblock-spawn-1  # Her sunucu için benzersiz bir ID
+
+
 Settings:
   # SHIFT + SOL tık ile alınacak adet sayısıdır.
   customBuyAmount: 32
